--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,6 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<Jumbo>
+{{!-- <div class="jumbo">
+  <div class="right tomster"></div> --}}
   <h2>About Super Rentals</h2>
   <p>
     The Super Rentals website is a delightful project created to explore Ember.
@@ -7,4 +8,5 @@
     AND building Ember applications.
   </p>
   <LinkTo @route="contact" class="button">Contact Us</LinkTo>
-</div>
+{{!-- </div> --}}
+</Jumbo>
