--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,6 @@
-<div class="jumbo">
-  <div class="right tomster"></div>
+<Jumbo>
+{{!-- <div class="jumbo">
+  <div class="right tomster"></div> --}}
   <h2>Contact Us</h2>
   <p>
     Super Rentals Representatives would love to help you<br>
@@ -15,4 +16,5 @@
     <a href="mailto:superrentalsrep@emberjs.com">superrentalsrep@emberjs.com</a>
   </address>
   <LinkTo @route="about" class="button">About</LinkTo>
-</div>
+{{!-- </div> --}}
+</Jumbo>
