refactor Map class + component + tests

--- a/app/components/map.hbs
+++ b/app/components/map.hbs
@@ -4,7 +4,8 @@
     alt="Map image at coordinates {{@lat}},{{@lng}}"
     ...attributes
     {{!-- after ...attributes and will not be overwritten --}}
-    src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/{{@lng}},{{@lat}},{{@zoom}}/{{@width}}x{{@height}}@2x?access_token={{this.token}}"
+    {{!-- src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/{{@lng}},{{@lat}},{{@zoom}}/{{@width}}x{{@height}}@2x?access_token={{this.token}}" --}}
+    src={{this.src}}
     width={{@width}} height={{@height}}
   >
 </div>
